# cookiecutter-pypackage

./: CONTRIBUTING.md  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.github/workflows/: dev-docs.yml  dev.yml
dev/: 404.html  index.html  sitemap.xml
dev/console_script_setup/: index.html
dev/faq/: index.html
dev/history/: index.html
dev/pypi_release_checklist/: index.html
dev/search/: search_index.json
dev/tutorial/: index.html
docs/: tutorial.md
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  mkdocs.yml  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/docs/reference/: reference.md
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.pkg_name}}.py
