{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[tool]
[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}."
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
readme = "README.md"
{%- if cookiecutter.open_source_license in license_classifiers %}
license =  "{{ cookiecutter.open_source_license }}"
{%- endif %}
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Natural Language :: English',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "{{ cookiecutter.pkg_name }}" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"
beartype = "^0.16.4"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.13.0"
mike = "^2.0.0"
mkdocs = "^1.5.3"
mkdocs-autorefs = "^0.5.0"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocs-git-committers-plugin-2 = "^2.2.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.2"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-jupyter = "^0.24.6"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-material = "^9.5.2"
mkdocs-material-extensions = "^1.3.1"
mkdocs-section-index = "^0.3.8"
mkdocstrings = { extras = ["crystal", "python"], version = "^0.24.0" }
mknotebooks = "^0.8.0"
mypy = "^1.7.1"
pymdown-extensions = "^10.5"
pytest = "^7.4.3"
ruff = "^0.1.7"
tox = "^4.11.4"
tox-current-env = "^0.0.11"
twine = "^4.0.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry"]

[tool.ruff]
ignore-init-module-imports = true
